--- a/.config/waybar/modules/style.css
+++ b/.config/waybar/modules/style.css
@@ -1,10 +1,10 @@
 * {
     border: none;
     border-radius: 0px;
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: "FiraCode Nerd Font";
     font-weight: bold;
     font-size: ${s_fontpx}px;
-    min-height: 10px;
+    min-height: 34px;
 }
 
 @import "theme.css";
